
  ZOOKEEPER-1379. 'printwatches, redo, history and connect '. client commands always print usage. This is not necessary (edward via fpj)

  ZOOKEEPER-1750. Race condition producing NPE in NIOServerCnxn.toString
  (Rakesh R via michim)

  ZOOKEEPER-1751. ClientCnxn#run could miss the second ping or connection get
  dropped before a ping. (Jeffrey Zhong  via mahadev)

IMPROVEMENTS:


Release 3.4.5 - 2012-09-30

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1376. zkServer.sh does not correctly check for
  $SERVER_JVMFLAGS (Skye W-M via henryr)

  ZOOKEEPER-1550. ZooKeeperSaslClient does not finish anonymous login on
  OpenJDK. (Eugene Koontz via mahadev)


Release 3.4.4 - 2012-09-17 

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1466. QuorumCnxManager.shutdown missing synchronization.
  (Patrick Hunt via mahadev)

  ZOOKEEPER-1386. avoid flaky URL redirection in "ant javadoc" : 
  replace "http://java.sun.com/javase/6/docs/api/" with 
  "http://download.oracle.com/javase/6/docs/api/" (Eugene Koontz via camille) 
  
  ZOOKEEPER-1354. AuthTest.testBadAuthThenSendOtherCommands fails
  intermittently (phunt via camille)
 
  ZOOKEEPER-1277. servers stop serving when lower 32bits of zxid roll
  over (phunt)

  ZOOKEEPER-1412. java client watches inconsistently triggered on
  reconnect (phunt)

  ZOOKEEPER-1344. ZooKeeper client multi-update command is not
  considering the Chroot request (Rakesh R via phunt)
  
  ZOOKEEPER-1307. zkCli.sh is exiting when an Invalid ACL exception is
  thrown from setACL command through client (Kavita Sharma via phunt)
  
  ZOOKEEPER-1390. some expensive debug code not protected by a check
  for debug (breed via camille)
  
  ZOOKEEPER-1406. dpkg init scripts don't restart - missing
  check_priv_sep_dir (Chris Beauchamp via phunt)
   
  ZOOKEEPER-1403. zkCli.sh script quoting issue (James Page via phunt)
   
  ZOOKEEPER-1384. test-cppunit overrides LD_LIBRARY_PATH and fails if